welcome.lessons.welcome.array.array123.Array123.scala.error
array123:21: error: Unmatched closing brace '}' ignored here
 }
 ^